--- a/output/team.html
+++ b/output/team.html
@@ -25,40 +25,40 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">chidi</h2>
+        <h2 class="card-title">chdi</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 2e998</li>
-            <li class="list-group-item">Email: <a href="mailto:rodney harrison">rodney harrison</a></li>
-            <li class="list-group-item">Office number: 838839</li>
+            <li class="list-group-item">ID: dhi</li>
+            <li class="list-group-item">Email: <a href="mailto:dhid">dhid</a></li>
+            <li class="list-group-item">Office number: dk</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">ashley</h2>
+        <h2 class="card-title">dsl</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 938493</li>
-            <li class="list-group-item">Email: <a href="mailto:ashlet@yah">ashlet@yah</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/ashleys" target="_blank" rel="noopener noreferrer">ashleys</a></li>
+            <li class="list-group-item">ID: djsk</li>
+            <li class="list-group-item">Email: <a href="mailto:dsjk">dsjk</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/" target="_blank" rel="noopener noreferrer"></a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">rrobert</h2>
+        <h2 class="card-title">djsk</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 83984</li>
-            <li class="list-group-item">Email: <a href="mailto:robert@yahoo">robert@yahoo</a></li>
-            <li class="list-group-item">School: Ut Austin</li>
+            <li class="list-group-item">ID: djk</li>
+            <li class="list-group-item">Email: <a href="mailto:sjkjd">sjkjd</a></li>
+            <li class="list-group-item">School: sjk</li>
         </ul>
     </div>
 </div>
